# ZeldaLike

./: .gitignore  CMakeLists.txt  README.md
assets/: world.ldtk
include/: game.hpp  utils.hpp
include/gameLogic/: collision.hpp  player.hpp  world.hpp
src/: game.cpp
src/gameLogic/: collision.cpp  player.cpp  world.cpp
